更新智能语音服务token获取

--- a/TestProgram/alibaba/appsettings.json
+++ b/TestProgram/alibaba/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //ai相关
+  "AITokenOptions": {
+    //阿里云账户
+    "AccountAccessKey": "your_account_access_key",
+    "AccountSecretKey": "your_account_secret_key",
+    "Region": "beijing",
+    //ai
+    "AIAppKey": "your_ai_app_key",
+    "AIAppSecret": "your_ai_app_secret",
+    //智能语音服务
+    "appKey": "your_speech_app_key",
+    "apptoken": "your_speech_app_token",
+    //模型id
+    "ModelId": "your_model_id"
+  }
 }
