--- a/TestProgram/alibaba/appsettings.json
+++ b/TestProgram/alibaba/appsettings.json
@@ -19,6 +19,10 @@
     "appKey": "your_speech_app_key",
     "apptoken": "your_speech_app_token",
     //模型id
-    "ModelId": "your_model_id"
+    "ModelId": "your_model_id",
+    //ChatMemo
+    "ChatMemoToken": "",
+    "ChatMemoCorpId": "",
+    "ChatMemoAppId":""
   }
 }
